--- a/src/main/resources/templates/editUserView.html
+++ b/src/main/resources/templates/editUserView.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h2>Edit User</h2>
-	<form method="post" action="#" th:object="${user}" th:action="@{/addUser}">
+	<form method="post" action="#" th:object="${user}" th:action="@{/users/} + ${user.id} + @{/edit}">
 		Name:<input type="text" name="name" th:field="*{name}"/>
 		<br/>
     	User name:<input type="text" name="username" th:field="*{username}"/>
