--- a/src/main/resources/templates/addIssueView.html
+++ b/src/main/resources/templates/addIssueView.html
@@ -10,6 +10,9 @@
 		<br/>
     	Description:<input type="text" name="description" th:field="*{description}"/>
     	<br/>
+    	
+    	User:<input type="text" name="userId" th:field="*{userId}"/>
+    	<br/>
     	<input type="submit" value="Submit"/>
 	</form>	
 </body>
